@@ -194,8 +194,8 @@ command to generate the output files.
       <match type="little32" value="0xcfd0e011" offset="0"/>
     </magic>
   </mime-type>
-  <mime-type type="application/vnd.ms-word">
-    <_comment>Microsoft Word document</_comment>
+  <mime-type type="application/msword">
+      <_comment>Microsoft Word document</_comment>
     <magic priority="50">
       <match type="string" value="\x31\xbe\x00\x00" offset="0"/>
       <match type="string" value="PO^Q`" offset="0"/>
@@ -205,7 +205,7 @@ command to generate the output files.
       <match type="string" value="Microsoft Word document data" offset="2112"/>
     </magic>
     <glob pattern="*.doc"/>
-    <alias type="application/msword"/>
+    <alias type="application/vnd.ms-word"/>
   </mime-type>
   <mime-type type="application/vnd.palm">
     <_comment>Palmpilot database/document</_comment>
