@@ -1,5 +1,10 @@
 2004-12-10  Christophe Fergeau  <teuf@gnome.org>
 
+	* freedesktop.org.xml.in: use application/msword as the main type
+	for MS/Word files
+
+2004-12-10  Christophe Fergeau  <teuf@gnome.org>
+
 	* freedesktop.org.xml.in: fix entry about DICOM, fixes bug #1310,
 	patch from Artur Frysiak <wiget@pld-linux.org>
 
